apps/staging/seafile/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile-staging
  namespace: seafile-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - seafile-staging.hansjlachmann.net
      secretName: seafile-tls
  rules:
    - host: seafile.hansjlachmann.net
      http:
        paths:
          - path: 
            pathType: Prefix
            backend:
              service:
                name: seafile
                port:
                  number: 80
